enable authentication for DB

--- a/Catalog.csproj
+++ b/Catalog.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>74bbfb9a-ad06-4356-812f-bdc31b37aa16</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
