--- a/Catalog.Api/Dockerfile
+++ b/Catalog.Api/Dockerfile
@@ -6,16 +6,16 @@ ENV ASPNETCORE_URLS=http://+:80
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0-focal AS build
 WORKDIR /src
-COPY ["Catalog.csproj", "./"]
-RUN dotnet restore "Catalog.csproj"
+COPY ["Catalog.Api.csproj", "./"]
+RUN dotnet restore "Catalog.Api.csproj"
 COPY . .
 WORKDIR "/src/."
-RUN dotnet build "Catalog.csproj" -c Release -o /app/build
+RUN dotnet build "Catalog.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Catalog.csproj" -c Release -o /app/publish
+RUN dotnet publish "Catalog.Api.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Catalog.dll"]
+ENTRYPOINT ["dotnet", "Catalog.Api.dll"]
